# bqat

./: README.md  config.yml  pyproject.toml  tox.ini  wrap.sh
.github/workflows/: pipline.yml
bqat/: __main__.py  app.py  models.py  utils.py
reports/coverage/: d_706a057255bbb3ef___init___py.html  d_706a057255bbb3ef_app_py.html  d_706a057255bbb3ef_models_py.html  d_706a057255bbb3ef_utils_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_engine_py.html  index.html  status.json
reports/junit/: junit.xml  report.html
tests/: test_cli.py  test_engine.py
